--- a/Theme/assets/css/table-responsive.css
+++ b/Theme/assets/css/table-responsive.css
@@ -1,14 +1,14 @@
 /*Unseen Column*/
 @media only screen and (max-width: 800px) {
-    #unseen table td:nth-child(2),
-    #unseen table th:nth-child(2) {display: none;}
+    #unseen table td:nth-child(1),
+    #unseen table th:nth-child(1) {display: none;}
 }
 
 @media only screen and (max-width: 640px) {
-    #unseen table td:nth-child(4),
-    #unseen table th:nth-child(4),
-    #unseen table td:nth-child(7),
-    #unseen table th:nth-child(7),
+    #unseen table td:nth-child(3),
+    #unseen table th:nth-child(3),
+    #unseen table td:nth-child(6),
+    #unseen table th:nth-child(6),
     #unseen table td:nth-child(8),
     #unseen table th:nth-child(8){display: none;}
 }
